# agio-example

./: .gitignore  pyproject.toml
agio_example/: __agio__.yml
agio_example/callbacks/: example1.py  package_callbacks.py
agio_example/package_settings/: local_layout.yml  local_settings.py  workspace_layout.yml  workspace_settings.py
agio_example/plugins/commands/: example_cmd.py  subcommand_cmd.py
agio_example/plugins/services/: example_thread_service.py
agio_example/resources/docs/: settings-field.md
