[project]
name = "agio-example"
version = "0.0.1"
description = "Example package."
authors = [
    { name = "paulwinex", email = "paulwinex@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


# for c-code compilation
#[tool.cibuildwheel]
#build = "cp38-* cp39-* cp310-* cp311-* cp312-*"
#skip = "pp*"  # skip PyPy


# === do not change code below  === #
[build-system]
requires = ["uv", "wheel", "setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]
